2008-01-03  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* C++ specific changes for cleaner compile, many datatypes
	promoted from signed to unsigned etc.

	* Makefile.proto: C++ function warning removed

2007-12-31  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_adrnameN, tino_sock_get_peernameN) 
	(tino_sock_get_socknameN): renamed from ...E to ...N

	* sock_tool.h (tino_sock_unix_kill_ifO): added

	* file.h (tino_file_unlinkO): added (has no sideffect on errno)

2007-12-30  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* html_entities.h: &and; corrected, placed under the CLL

	* getopt.h (main): better commented

2007-12-22  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* log.h: works again for filename '-'

2007-10-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_parse): removed PLUS_var warning, as this
	should (perhaps) start to work somehow ..
	
2007-10-05  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* ex.h (tino_verr): oops, ifndef -> ifdef

2007-10-04  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_p): added to return the child PID
	(tino_wait_child): uses tino_wait_child_p
	(tino_wait_child_poll): added

	* log.h (tino_log_errorO): unused variable removed

2007-10-03  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* Makefile-diet.sh (rundiet): now tries to autodetect where diet
	lives

2007-10-01  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* Makefile.proto: -Wno-unused-function added as -O3 no more
	removes this.  However in future I want to add -Wextra, too.

	* ex.h (tino_verr): TINO_NEED_OLD_ERR_FN as a flag for utilities
	which are not tino_err() conformant nor aware.

	* filetool.h (tino_file_mkdirs_forfile): bugfix.  The parent
	upstream directories were not created (only a single level was).

	* Due to a catastrophic hard drive failure my RH7.3 development
	system was re-installed with Debian Etch.  Yes, I lost some data